<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get a way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered by Maimuna Chowdhury</string>
    <!-- strings for On Boarding Screen-->

    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back and Enjoy</string>


    <!--Descriptions-->
    <string name="First_slide_desc">You can search any place nearby or within the specified city.We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <!--User Dashboard-->

    <string name="search_text">search...</string>
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_location_description">All the locations that are featured and have the top demand in town</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="view_all">View All</string>
    <string name="categories">Categories</string>
    <string name="home">HOME</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="search">SEARCH</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string-array name="cities">
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Khulna</item>
        <item>Sylhet</item>
        <item>Rajshahi</item>
        <item>Barishal</item>
        <item>Rangpur</item>
        <item>Cumilla</item>
        <item>Gazipur</item>
        <item>Narayanganj</item>
    </string-array>

    <string-array name="k_hospitals">
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Khulna</item>
        <item>Sylhet</item>
        <item>Rajshahi</item>
        <item>Barishal</item>
        <item>Rangpur</item>
        <item>Cumilla</item>
        <item>Gazipur</item>
        <item>Narayanganj</item>
    </string-array>

</resources>