<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/search_icon"/>
        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/all_categories"
            android:icon="@drawable/ic_baseline_category_24"/>
        <item
            android:id="@+id/nav_add_missing_place"
            android:title="@string/add_missing_place"
            android:icon="@drawable/ic_baseline_place_24"/>
        <item
            android:id="@+id/nav_makecall"
            android:title="MAKE A CALL"
            android:icon="@drawable/ic_baseline_local_phone_24"/>


    </group>
    <item
        android:title="Profile">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="Login"
                    android:icon="@drawable/ic_baseline_login_24"/>
                <!--<item
                    android:id="@+id/nav_profile"
                    android:title="Profile"
                    android:icon="@drawable/ic_baseline_person_24"/>-->
                <item
                    android:id="@+id/nav_logout"
                    android:title="Logout"
                    android:icon="@drawable/ic_baseline_logout_24"/>

            </group>
        </menu>

    </item>
    <item
        android:title="Categories">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_restaurants"
                    android:title="Restaurants"
                    android:icon="@drawable/ic_baseline_restaurant_24"/>
                <item
                    android:id="@+id/nav_hospital"
                    android:title="Hospitals"
                    android:icon="@drawable/ic_baseline_local_hospital_24"/>
                <item
                    android:id="@+id/nav_bank"
                    android:title="Banks"
                    android:icon="@drawable/ic_baseline_money_24"/>
                <item
                    android:id="@+id/nav_education"
                    android:title="Education"
                    android:icon="@drawable/ic_baseline_school_24"/>
                <item
                    android:id="@+id/nav_shop"
                    android:title="Shops"
                    android:icon="@drawable/ic_baseline_shopping_cart_24"/>
                <item
                    android:id="@+id/nav_airport"
                    android:title="Airports"
                    android:icon="@drawable/ic_baseline_local_airport_24"/>


            </group>
        </menu>

    </item>
    <item
        android:title="Share">
        <menu>
            <group
                android:checkableBehavior="none">


                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/ic_baseline_share_24"/>
                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/ic_baseline_star_rate_24"/>

            </group>
        </menu>

    </item>


</menu>